Fix collapsed nav, add padding to content

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -40,4 +40,5 @@
 
 .content {
   padding-top: 30px;
+  padding-bottom: 30px;
 }
